--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
 
+    <script src="lib/api-check/dist/apiCheck.min.js"></script> <!-- must appear before formly.js -->
+    <script src="lib/dist/formly.min.js"></script>
 
     <script src="js/directives.js"></script>
 
