Categorias e Code agregable

--- a/www/index.html
+++ b/www/index.html
@@ -45,8 +45,9 @@
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
 
-    <script src="lib/api-check/dist/apiCheck.min.js"></script> <!-- must appear before formly.js -->
-    <script src="lib/dist/formly.min.js"></script>
+    <script src="lib/api-check/dist/api-check.min.js"></script>
+    <script src="lib/angular-formly/dist/formly.min.js"></script>
+    <script src="lib/angular-formly-templates-ionic/dist/angular-formly-templates-ionic.js"></script>
 
     <script src="js/directives.js"></script>
 
